@@ -2,6 +2,7 @@ LATEST
 -------------------------------
 - fix ClassCastException: ch.ehi.iox.adddefval.ItfAddDefValueReader in Ili2Reader.myread()
 - fix missing raw main table features (*_MT)
+- switch validator to ITF raw mode if ILI1_LINETABLES=Raw
 
 ili2fme 7.0.1 (2019-08-23) BETA
 -------------------------------
